dev-infras/rancher/rancher-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-rancher
  namespace: cattle-system
spec:
  ports:
    - protocol: TCP
      port: 65480
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-rancher
  namespace: cattle-system
subsets:
  - addresses:
      - ip: 172.19.130.219
    ports:
      - port: 65480
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: external-rancher
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: kubernetes.yourdomain.com
      http:
        paths:
          - backend:
              serviceName: external-rancher 
              servicePort: 65480
  tls:
    - hosts:
        - kubernetes.yourdomain.com
      secretName: kubernetes-yourdomain-com
